2A/05_Projet_GL/src/test/deca/context/invalid/complet/23_field_int_init_float.deca
// Description :
//    Assign invalide dans decl field : float --> int 
// Resultats :
//    ligne 10 : le float ne peut pas être affecté à int
// Historique :
//  cree le 16/01/2024


class A {
    int a = 12.3 ; 
}